Fixed spacing on mobile

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -445,31 +445,9 @@ body {
     display: flex;
     flex-direction: column;
     gap: 2rem;
-    // border-bottom: 1px solid $border;
+    
+    @include sm { padding: 3rem 0 1rem }
   }
-  
-  .projects__top {
-    display: flex;
-    
-
-    @include md {
-      flex-direction: column;
-      gap: 2rem;
-    }
-    
-    h2 {
-      font-size: 2.875rem;
-      font-weight: 600;
-      margin-bottom: 1.75rem;
-    }
-    
-    p {
-      font-size: 1.25rem;
-      max-width: 524px;
-    }
-
-  }
-  
   
   .projects__inner {
     display: flex;
@@ -559,6 +537,8 @@ body {
     display: flex;
     align-self: center;
     padding: 1rem 0 2rem;
+
+    @include sm { padding: .25rem 0 1rem }
     
     button {
       background: none;
@@ -583,24 +563,7 @@ body {
   padding: 6rem 0;
   background: $bg-darker;
 
-  .services__top {
-    display: flex;
-    flex-direction: column;
-    padding: 2rem 0;
-
-    @include md { padding: 5rem 0 }
-
-    h2 {
-      font-size: 3rem;
-      font-weight: 600;
-      line-height: 120%;
-      margin-bottom: 2rem;
-
-      @include lg { font-size: 4rem }
-      @include md { font-size: 3rem }
-      @include sm { font-size: 2.5rem }
-    }
-  }
+  @include sm { padding: 3rem 0 }
 
   .services__list {
     display: grid;
@@ -609,9 +572,12 @@ body {
 
     @include lg { grid-template-columns: 1fr 1fr }
     @include md { grid-template-columns: 1fr }
+    @include sm { gap: 1.5rem }
 
     .services__item {
       min-height: 350px;
+
+      @include sm { min-height: 300px }
 
       .services__overlay {
         z-index: 0;
@@ -647,19 +613,28 @@ body {
             font-size: 1.625rem;
             font-weight: 500;
             margin-bottom: 1rem;
+
+            @include sm { font-size: 1.5rem }
           }
     
           p {
-            margin: 0 0 1.5rem;
+            margin: 0;
             padding: 0;
             font-style: italic;
-            line-height: 2rem;
+            line-height: 1.75rem;
+
+            @include sm {
+              font-size: .8rem;
+              line-height: 1.5rem;
+            }
           }
     
           .services__icon {
             width: 40px;
             height: 40px;
             margin-bottom: 2.5rem;
+
+            @include sm { margin-bottom: 1rem }
           }
     
           .services__button {
@@ -675,11 +650,18 @@ body {
           }
 
           .services__text {
-            padding: 1rem 0;
+            padding: 3rem 0 1rem;
 
             p {
               font-size: 1.25rem;
               font-style: normal;
+              margin: 0 0 1.5rem;
+              line-height: 2rem;
+
+              @include sm {
+                font-size: 1rem;
+                line-height: 1.75rem;
+              }
             }
           }
         }
